# common

./: CMakeLists.txt  Jenkinsfile  README.md
avro/: C.h  CMakeLists.txt  main.cc  main2.cc  reader.json  writer.json
ci/jobs/: view.groovy
ci/jobs/common_build_image_build/: build.sh  common_build_image_build.groovy  main.sh
ci/jobs/common_deployment_image_build/: build.sh  common_deployment_image_build.groovy
ci/jobs/common_library_build/: common_library_build.groovy  gerrit_common_library_build.groovy  main.sh  test.groovy
command_processor/: CMakeLists.txt  CommandProcessor.cc  CommandProcessor.h  ICommand.h  ICommandAdapter.h  IMessageReceiver.h  UdpMessageReceiver.cc  UdpMessageReceiver.h
command_processor/test/: CMakeLists.txt  TestCommandProcessor.cc  TestCommands.h  TestMessageReceiver.cc  TestMessageReceiver.h  TestStringCommandAdapter.cc  TestStringCommandAdapter.h
communication/: CMakeLists.txt  Message.h
communication/udp/: CMakeLists.txt  UdpInterface.cc  UdpInterface.h  UdpReceiver.cc  UdpReceiver.h  UdpSender.cc  UdpSender.h
communication/udp/test/: CMakeLists.txt  udp_echo_server.cc  udp_receiver_test.cc  udp_sender_test.cc
config/: CMakeLists.txt  Config.cc  Config.h
config/test/: CMakeLists.txt  TestConfig.cc
env/buildenv/raspbian/: Dockerfile  build.sh
env/buildenv/ubuntu/: Dockerfile  build.sh  build_dockerized.sh
env/deploymentenv/ubuntu/: Dockerfile  build.sh
etc/: CMakeLists.txt  erostamas-common.conf
logging/: CMakeLists.txt  Logging.cc  Logging.h
something/: CMakeLists.txt  Something.cc  Something.h  test_something.cc
test/: CMakeLists.txt  test_config_and_logging.cc
