set(TARGET et_config)
add_library(${TARGET} SHARED
	Config.cc
)

target_link_libraries(${TARGET}
	${BOOST_LIBS}
	et_logging
)

INSTALL(TARGETS ${TARGET}
	DESTINATION /usr/lib/erostamas/
	PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Config.h
	DESTINATION /usr/include/erostamas/
	PERMISSIONS OWNER_READ GROUP_READ WORLD_READ
)

add_subdirectory(test)
